# SimpleLCDTouchScreen

./: .gitignore  CMakeLists.txt  Color.h  LICENSE  Label.cpp  Label.h  Line.cpp  Line.h  Main.ino  Picture.cpp  Picture.h  PictureButton.cpp  PictureButton.h  README.md  Rectangle.cpp  Rectangle.h  RectangleButton.cpp  RectangleButton.h  RoundRectangle.cpp  RoundRectangle.h  RoundRectangleButton.cpp  RoundRectangleButton.h  ScreenObject.cpp  ScreenObject.h  ScreenObjectWithLabel.cpp  ScreenObjectWithLabel.h  ScreenObjectWithPicture.cpp  ScreenObjectWithPicture.h  ScreenObjectWithSecondaryColor.cpp  ScreenObjectWithSecondaryColor.h  ScreenObjectWithTouch.cpp  ScreenObjectWithTouch.h  ScreenObjectWithXtraCoords.cpp  ScreenObjectWithXtraCoords.h  SimpleLCDTouchScreen.cpp  SimpleLCDTouchScreen.h  SimpleLCDTouchScreen.ino  SimpleLCDTouchScreen.sln  SimpleLCDTouchScreen.vcxproj  SimpleLCDTouchScreen.vcxproj.filters  (+10 more)
.github/workflows/: codeql-analysis.yml
LCDWIKI_KBV/: LCDWIKI_KBV.h
ReleaseReady/SimpleLCDTouchScreen/: Label.cpp  Picture.h  PictureButton.cpp  README.md  RectangleButton.cpp  RectangleButton.h  RoundRectangle.cpp  RoundRectangleButton.cpp  RoundRectangleButton.h  ScreenObject.cpp  ScreenObject.h  ScreenObjectWithLabel.cpp  ScreenObjectWithLabel.h  ScreenObjectWithPicture.cpp  ScreenObjectWithPicture.h  ScreenObjectWithRectangle.cpp  ScreenObjectWithRectangle.h  ScreenObjectWithSecondaryColor.cpp  ScreenObjectWithSecondaryColor.h  ScreenObjectWithTouch.cpp  ScreenObjectWithTouch.h  ScreenObjectWithXtraCoords.cpp  SimpleLCDTouchScreen.cpp  SimpleLCDTouchScreen.h  TextBox.cpp  TouchScreenObject.cpp  TouchScreenObject.h  keywords.txt  library.properties
__TEST__/SD_Data/: test.txt
__vm/: .SimpleLCDTouchScreen.vsarduino.h  Compile.vmps.xml  Configuration.Debug.vmps.xml  Configuration.Release.vmps.xml
cmake/: ArduinoToolchain.cmake
src/: SimpleLCDTouchScreen.cpp  SimpleLCDTouchScreen.h
(+182 files in other folders)
